@@ -1,12 +1,13 @@
 from datetime import datetime
+from zExceptions import NotFound
 
-from seantis.reservation.reserve import YourReservations
+from seantis.reservation.reserve import YourReservations, ReservationForm
 from seantis.reservation.session import serialized
 from seantis.reservation import plone_session
 from seantis.reservation.tests import IntegrationTestCase
 
 
-class TestYourReservations(IntegrationTestCase):
+class TestReservationForm(IntegrationTestCase):
 
     @serialized
     def test_reservation_data(self):
@@ -31,3 +32,20 @@ class TestYourReservations(IntegrationTestCase):
 
         view = YourReservations(resource, request)
         self.assertEqual(1, len(view.reservations()))
+
+    @serialized
+    def test_allocation_property(self):
+        self.login_manager()
+
+        resource = self.create_resource()
+        scheduler = resource.scheduler()
+
+        start = datetime(2012, 12, 10, 8, 0)
+        end = datetime(2012, 12, 10, 12, 0)
+        allocation = scheduler.allocate((start, end))[0]
+
+        request = self.portal.REQUEST
+        form = ReservationForm(resource, request)
+
+        self.assertEqual(form.allocation(allocation.id).id, allocation.id)
+        self.assertRaises(NotFound, form.allocation, 1234)
